<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Left -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:text="@string/food"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCategory"
                android:text="@string/category"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_date"
                android:text="@string/date"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <!-- Amount -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAmount"
            android:text="₹200"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnDelete"
            android:src="@android:drawable/ic_menu_delete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:tint="#de0a26"
            android:layout_marginStart="8dp"/>


    </LinearLayout>



</androidx.cardview.widget.CardView>