<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_grey">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="8dp"
        />



        <androidx.appcompat.widget.AppCompatImageView
            android:layout_below="@id/tv_setting"
            android:id="@+id/im_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="fitXY"
            android:src="@drawable/profile_image"
            android:backgroundTint="@color/light_grey"
            android:layout_centerInParent="true"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_below="@id/im_profile"
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:layout_centerInParent="true"/>




    <androidx.cardview.widget.CardView
        android:id="@+id/cd_dark_mode"
        android:layout_below="@id/tv_profile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        app:cardCornerRadius="10dp"
        android:layout_gravity="center"
        android:padding="16dp"
        app:cardElevation="4dp">

    <LinearLayout
        android:id="@+id/ll_dark_mode"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"/>


    </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_currency"
        android:layout_below="@id/cd_dark_mode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        app:cardCornerRadius="10dp"
        android:layout_gravity="center"
        android:padding="16dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/ll_currency"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/currency"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ll_data_management"
        android:layout_below="@id/cd_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/data_management"
            android:textSize="18sp" />


        <LinearLayout
            android:id="@+id/ll_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_all_data"
                android:textColor="#de0a26"
                android:textSize="16sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="#E8E9EB"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/export_data"
                android:textColor="#6699CC"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_about"
        android:layout_below="@id/ll_data_management"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        tools:ignore="DuplicateIds">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="About"
        android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="10dp"
            android:layout_gravity="center"
            android:padding="16dp"
            app:cardElevation="4dp">


    <LinearLayout
        android:id="@+id/vv"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:background="@color/white">


    <LinearLayout
        android:id="@+id/ll"
        android:layout_below="@id/ll_data_management"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="Version"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.0.0"/>

    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="#E8E9EB"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/privacy_policy"
            android:textColor="@color/blue"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="#E8E9EB"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/terms_of_service"
            android:textColor="@color/blue"/>


    </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>



    </RelativeLayout>

