<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>


    <LinearLayout
        android:layout_below="@id/tv_dashboard"
        android:id="@+id/ll_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/light_Green"
                android:layout_weight="1"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income"
                        android:textSize="14sp"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+0.00"
                        android:textStyle="bold"
                        android:textColor="@color/Green"
                        android:textSize="16sp"/>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnDelete"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:rotation="180"
                    android:src="@drawable/up_arrow_red"
                    app:tint="@color/Green"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            android:layout_margin="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/light_red"
                android:layout_weight="1"
                android:padding="12dp">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_expenses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expenses"
                        android:textSize="14sp"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_exe_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-0.00"
                        android:textColor="@color/red"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        />

                </LinearLayout>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_height="18dp"
                    android:layout_width="18dp"
                    android:layout_marginStart="8dp"
                    android:id="@+id/btn_Delete"
                    android:src="@drawable/up_arrow_red"
                    app:tint="@color/red"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:visibility="visible"
        android:id="@+id/cd_balance"
        android:layout_below="@id/ll_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/ll_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#F2FBFF"
            android:padding="10dp">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_curr_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_balance"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_current_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_balance"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:max="100"
                android:layout_marginTop="12dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/cd_balance"
         />

    <LinearLayout
        android:id="@+id/ll_transaction"
        android:layout_below="@id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <!-- Title -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_recent_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_transaction"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_seeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sell_all"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:layout_marginEnd="16dp"
            />




    </LinearLayout>

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_transaction"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</RelativeLayout>